# vivpro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.sample  pyproject.toml
app/: main.py
app/core/: config.py  logger_config.py
app/crud/: songs.py
app/database/: connection.py
app/models/: songs.py
app/models/mixins/: default_fields.py
app/routes/v1/: api_v1.py
app/routes/v1/endpoints/: songs.py
app/schemas/: songs.py
app/services/: songs.py
app/utils/: constants.py  exception_handlers.py  middleware.py
migrations/: env.py
migrations/versions/: 08ccbed85f79_create_songs_table.py
tests/: conftest.py  test_main.py  test_songs.py
